added header component

--- a/src/Authentication/SignIn/SignIn.css
+++ b/src/Authentication/SignIn/SignIn.css
@@ -51,6 +51,7 @@ span.psw {
 .sign {
   display: flex;
   flex-direction: space-between;
+  margin-left: -12px;
 }
 
 /* Change styles for span and cancel button on extra small screens */
